packages/preview/unofficial-ouc-bachelor-thesis/0.3.1/CHANGELOG.md
# 更新日志

## v0.3.1 - 2026-05-13

### 修复

- 移除了校徽 svg 中的投影，可能会在某些打印机中被明显打出。
- 修复了 `1ed0f60` commit 中引入的一级标题不断页的问题。
- 修复了 `8521033` commit 中引入的引用序号错误的问题。

## v0.3.0 - 2026-05-12 [弃用]

**存在较大问题，请使用 v0.3.1。**

### 新增

- 附录功能，使用 `project.appendix` 参数传入。

### 修复

- 公式右侧编号的字号改为 `五号`、Times New Roman 字体。
- 目录中的一级章节无需显示页码。
- 三线表的中线有可能因 `row-gutter` 的设置而消失。

## v0.2.1 - 2026-05-04

### 修复

- 修复英文摘要正文与英文关键词字号，应使用 `四号`。
- 修复参考文献和致谢标题字号，应使用 `小三`。
- 修复参考文献标题未正确加入书签和大纲的问题。
- 修复黑体文本被额外伪粗处理导致字重过重的问题。
- 修复图表标题分隔间距过大的问题，将标题分隔限制为 `0.5em`。
- 将章节编号配置移动到全局样式中，使编号选项能够稳定生效。

### 变更

- 更新包版本到 `0.2.1`。
- 更新 README 与模板示例中的 Typst Universe 引用版本。
- 更新示例预览图片。

## v0.2.0 - 2026-04-30

### 新增

- 支持通过 `config` 配置字体和编号样式。
- 支持多导师信息。
- 为模板补充用户指南与基础语法章节。
- 连续表格支持显示“续表”标记。
- 支持带有真实 `table.header` 的三线表连续表格。
- 新增 QQ 群二维码与相关说明。

### 修复

- 修复封面、标题、摘要、目录、参考文献和致谢等组件的多处排版细节。
- 修复标题内容影响后续组件布局的问题。
- 修复一级标题前分页逻辑，避免在第一个一级标题前产生多余分页。
- 修复图、表、代码块等块级元素的段间距、行距和放置行为。
- 修复图题字号，应使用 `五号`。
- 修复表格字号，应使用 `五号`。
- 修复表头、连续表格标记和表格间距。
- 修复中文粗体、斜体和黑体关键字的处理逻辑。
- 修复参考文献渲染方式，改用 `gb7714-bibliography`，并将 `full` 选项设为 `false`。
- 修复 `zebraw` 初始化与版本相关问题。
- 修复等宽字体配置，补充更多 monospace 字体。
- 修复答辩日期初始化逻辑。
- 修复缩略图路径、发布清单和 Typst Universe 打包相关配置。
- 修复 GitHub Actions 发布工作流的 artifact 路径与依赖安装问题。

### 变更

- 更新 README，补充 Typst Universe 初始化方式、示例图片、中文字体安装说明和合规性说明。
- 更新模板示例内容与默认入口引用。
- 更新包版本到 `0.2.0`。
- 更新示例预览图片。
- 更新 GitHub Actions 到兼容 Node 24 的版本。
- 调整 `.gitignore` 和 `typst.toml`，排除脚本等非发布内容。

## v0.1.0 - 2026-04-22

### 新增

- 首次发布中国海洋大学本科毕业论文 Typst 模板。
- 提供论文主模板、封面、摘要、目录、参考文献、致谢和正文样式。
- 提供基础字体配置、中文/西文字体处理、伪粗体和伪斜体支持。
- 提供三线表工具、`zebraw` 与 `itemize` 相关样式支持。
- 支持由 `project` 统一组织论文信息、参考文献和致谢内容。
- 提供 Typst 包配置、README、示例图片、缩略图和许可证。
- 提供 `justfile`、打包脚本和 GitHub Actions 发布工作流。

### 修复

- 修复页码、段落、标题、目录链接、封面和参考文献等初始排版问题。
- 修复模板目录结构、导入路径、缩略图路径和仓库链接。
- 修复 README 徽章链接、初始化命令和示例说明。
- 修复 CI 中 Typst、中文字体和 `just` 的安装步骤。

### 变更

- 重构模板配置、作者信息结构和字体注入方式。
- 更新示例预览图片。
- 补充非 Windows 用户安装中文字体包的说明。
